--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
   text-align: center;
+  /* background-color: aqua; */
+  width: 100%;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pokemonCardContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
+  gap: 20px;
+  margin-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn {
+  padding: 30px 0;
+  gap: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.btn button {
+  padding: 13px 32px;
+  background-color: aqua;
+  border: none;
+  box-shadow: 0px 2px 10px 5px #546263;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn button:hover {
+  transform: translateY(5px);
+  box-shadow: none;
 }
+
